--- a/resources/scss/07.components/01.headers/_index.scss
+++ b/resources/scss/07.components/01.headers/_index.scss
@@ -1,17 +1,11 @@
 .site-header {
 	background: color( black );
-	padding: 0.5rem;
+	padding: 1.125rem;
 
 	.branding-navigation {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-gap: 1.125rem;
+		text-align: center;
 
 		.site-branding {
-			.site-title,
-			.site-description {
-				float: left;
-			}
 
 			.site-title {
 				font-size: 2.25rem;
@@ -26,6 +20,41 @@
 			.site-description {
 				color: color( white );
 				padding: 0.75rem;
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 1170px ) {
+	.site-header {
+		background: color( black );
+		padding: 1rem;
+
+		.branding-navigation {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-gap: 1.125rem;
+
+			.site-branding {
+				.site-title,
+				.site-description {
+					float: left;
+				}
+
+				.site-title {
+					font-size: 2.25rem;
+					margin: 0;
+					padding: 0;
+
+					a {
+						color: color( white );
+					}
+				}
+
+				.site-description {
+					color: color( white );
+					padding: 0.75rem;
+				}
 			}
 		}
 	}
