--- a/style.css
+++ b/style.css
@@ -4,10 +4,13 @@
  * Author:      Benjamin Lu
  * Author URI:  https://luthemes.com
  * Description: Creativity is a next-generation theme designed to work with ClassicPress, offering an ideal experience for showcasing your site's content.
+ * License:      GNU General Public License v2.0 or later
+ * License URI:  https://www.gnu.org/licenses/gpl-2.0.html
  * Tags:
  * Text Domain: creativity
  * Requires CP:  1.0
  * Requires PHP: 7.0
+ * Tested up to: 6.0
  * Version:      0.0.1
  */
 
