--- a/resources/scss/07.components/03.contents/02.single/_index.scss
+++ b/resources/scss/07.components/03.contents/02.single/_index.scss
@@ -11,6 +11,11 @@
 						margin: 0;
 						padding: 0;
 					}
+
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
+					}
 				}
 			}
 		}
