--- a/resources/scss/07.components/03.contents/01.default/_index.scss
+++ b/resources/scss/07.components/03.contents/01.default/_index.scss
@@ -1,10 +1,163 @@
-@media screen and (min-width: 1170px ) {
+@media screen and ( max-width: 480px ) {
 	.blog {
 		.content-area {
 			.grid-items {
-				display: grid;
-				grid-template-columns: 1fr 1fr;
-				grid-gap: 1.125rem;
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+
+				.grid-item {
+					margin-top: 1.125rem;
+
+					&:first-child {
+						margin-top: 0;
+					}
+
+					.post {
+						background: color( white );
+						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+						padding: 1.125rem;
+
+						.entry-header {
+							.entry-title {
+								line-height: 2.8rem;
+								margin: 0;
+								padding: 0;
+							}
+
+							.entry-metadata {
+								font-family: font-family( date );
+								font-size: 2rem;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 481px ) and  ( max-width: 600px ) {
+	.blog {
+		.content-area {
+			.grid-items {
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+
+				.grid-item {
+					margin-top: 1.125rem;
+
+					&:first-child {
+						margin-top: 0;
+					}
+
+					.post {
+						background: color( white );
+						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+						padding: 1.125rem;
+
+						.entry-header {
+							.entry-title {
+								line-height: 2.8rem;
+								margin: 0;
+								padding: 0;
+							}
+
+							.entry-metadata {
+								font-family: font-family( date );
+								font-size: 2rem;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 601px ) and  ( max-width: 768px ) {
+	.blog {
+		.content-area {
+			.grid-items {
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+
+				.grid-item {
+					margin-top: 1.125rem;
+
+					&:first-child {
+						margin-top: 0;
+					}
+
+					.post {
+						background: color( white );
+						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+						padding: 1.125rem;
+
+						.entry-header {
+							.entry-title {
+								line-height: 2.8rem;
+								margin: 0;
+								padding: 0;
+							}
+
+							.entry-metadata {
+								font-family: font-family( date );
+								font-size: 2rem;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 769px ) and  ( max-width: 1024px ) {
+	.blog {
+		.content-area {
+			.grid-items {
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+
+				.grid-item {
+					margin-top: 1.125rem;
+
+					&:first-child {
+						margin-top: 0;
+					}
+
+					.post {
+						background: color( white );
+						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+						padding: 1.125rem;
+
+						.entry-header {
+							.entry-title {
+								line-height: 2.8rem;
+								margin: 0;
+								padding: 0;
+							}
+
+							.entry-metadata {
+								font-family: font-family( date );
+								font-size: 2rem;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (min-width: 1025px ) {
+	.blog {
+		.content-area {
+			.grid-items {
 				list-style-type: none;
 				margin: 0;
 				padding: 0;
@@ -24,7 +177,7 @@
 
 							.entry-metadata {
 								font-family: font-family( date );
-								font-size: 2rem;
+								font-size: 1.625rem;
 							}
 						}
 					}
