--- a/resources/scss/07.components/03.contents/03.page/_index.scss
+++ b/resources/scss/07.components/03.contents/03.page/_index.scss
@@ -1,4 +1,61 @@
-@media screen and ( min-width: 1170px ) {
+@media screen and ( max-width: 480px ) {
+	.single-page {
+		.content-area {
+			.page {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				padding: 1.125rem;
+
+				.entry-header {
+					.entry-title {
+						margin: 0;
+						padding: 0;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 481px ) and ( max-width: 600px ) {
+	.single-page {
+		.content-area {
+			.page {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				padding: 1.125rem;
+
+				.entry-header {
+					.entry-title {
+						margin: 0;
+						padding: 0;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 601px ) and ( max-width: 1024px ) {
+	.single-page {
+		.content-area {
+			.page {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				padding: 1.125rem;
+
+				.entry-header {
+					.entry-title {
+						margin: 0;
+						padding: 0;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 1025px ) {
 	.single-page {
 		.content-area {
 			.page {
