--- a/resources/scss/07.components/03.contents/01.default/_index.scss
+++ b/resources/scss/07.components/03.contents/01.default/_index.scss
@@ -1,35 +1,33 @@
 @media screen and ( max-width: 480px ) {
 	.blog {
 		.content-area {
-			.grid-items {
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				margin-bottom: 1.125rem;
+				min-height: 16.5rem;
+				padding: 1.125rem;
 
-				.grid-item {
-					margin-top: 1.125rem;
+				&.has-post-thumbnail {
+					.post-thumbnail {
+						.size-creativity-small {
+							height: auto;
+							margin-bottom: 1.125em;
+							width: auto;
+						}
+					}
+				}
 
-					&:first-child {
-						margin-top: 0;
+				.entry-header {
+					.entry-title {
+						line-height: 2.8rem;
+						margin: 0;
+						padding: 0;
 					}
 
-					.post {
-						background: color( white );
-						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
-						padding: 1.125rem;
-
-						.entry-header {
-							.entry-title {
-								line-height: 2.8rem;
-								margin: 0;
-								padding: 0;
-							}
-
-							.entry-metadata {
-								font-family: font-family( date );
-								font-size: 2rem;
-							}
-						}
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
 					}
 				}
 			}
@@ -40,35 +38,33 @@
 @media screen and ( min-width: 481px ) and  ( max-width: 600px ) {
 	.blog {
 		.content-area {
-			.grid-items {
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				margin-bottom: 1.125rem;
+				min-height: 16.5rem;
+				padding: 1.125rem;
 
-				.grid-item {
-					margin-top: 1.125rem;
+				&.has-post-thumbnail {
+					.post-thumbnail {
+						.size-creativity-small {
+							height: auto;
+							margin-bottom: 1.125em;
+							width: auto;
+						}
+					}
+				}
 
-					&:first-child {
-						margin-top: 0;
+				.entry-header {
+					.entry-title {
+						line-height: 2.8rem;
+						margin: 0;
+						padding: 0;
 					}
 
-					.post {
-						background: color( white );
-						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
-						padding: 1.125rem;
-
-						.entry-header {
-							.entry-title {
-								line-height: 2.8rem;
-								margin: 0;
-								padding: 0;
-							}
-
-							.entry-metadata {
-								font-family: font-family( date );
-								font-size: 2rem;
-							}
-						}
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
 					}
 				}
 			}
@@ -79,35 +75,33 @@
 @media screen and ( min-width: 601px ) and  ( max-width: 768px ) {
 	.blog {
 		.content-area {
-			.grid-items {
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				margin-bottom: 1.125rem;
+				min-height: 16.5rem;
+				padding: 1.125rem;
 
-				.grid-item {
-					margin-top: 1.125rem;
+				&.has-post-thumbnail {
+					.post-thumbnail {
+						.size-creativity-small {
+							height: auto;
+							margin-bottom: 1.125em;
+							width: auto;
+						}
+					}
+				}
 
-					&:first-child {
-						margin-top: 0;
+				.entry-header {
+					.entry-title {
+						line-height: 2.8rem;
+						margin: 0;
+						padding: 0;
 					}
 
-					.post {
-						background: color( white );
-						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
-						padding: 1.125rem;
-
-						.entry-header {
-							.entry-title {
-								line-height: 2.8rem;
-								margin: 0;
-								padding: 0;
-							}
-
-							.entry-metadata {
-								font-family: font-family( date );
-								font-size: 2rem;
-							}
-						}
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
 					}
 				}
 			}
@@ -118,35 +112,34 @@
 @media screen and ( min-width: 769px ) and  ( max-width: 1024px ) {
 	.blog {
 		.content-area {
-			.grid-items {
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				margin-bottom: 1.125rem;
+				min-height: 16.5rem;
+				padding: 1.125rem;
 
-				.grid-item {
-					margin-top: 1.125rem;
+				&.has-post-thumbnail {
+					position: relative;
+					padding-left: 19.875rem;
 
-					&:first-child {
-						margin-top: 0;
+					.post-thumbnail {
+						left: 0;
+						position: absolute;
+						top: 0;
+					}
+				}
+
+				.entry-header {
+					.entry-title {
+						line-height: 2.8rem;
+						margin: 0;
+						padding: 0;
 					}
 
-					.post {
-						background: color( white );
-						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
-						padding: 1.125rem;
-
-						.entry-header {
-							.entry-title {
-								line-height: 2.8rem;
-								margin: 0;
-								padding: 0;
-							}
-
-							.entry-metadata {
-								font-family: font-family( date );
-								font-size: 2rem;
-							}
-						}
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
 					}
 				}
 			}
@@ -157,45 +150,34 @@
 @media screen and (min-width: 1025px ) {
 	.blog {
 		.content-area {
-			.grid-items {
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				margin-bottom: 1.125rem;
+				min-height: 16.5rem;
+				padding: 1.125rem;
 
-				.grid-item {
-					.post {
-						background: color( white );
-						box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
-						padding: 1.125rem;
+				&.has-post-thumbnail {
+					position: relative;
+					padding-left: 19.875rem;
 
-						.entry-header {
-							.entry-title {
-								line-height: 2.8rem;
-								margin: 0;
-								padding: 0;
-							}
-
-							.entry-metadata {
-								font-family: font-family( date );
-								font-size: 1.625rem;
-							}
-						}
+					.post-thumbnail {
+						left: 0;
+						position: absolute;
+						top: 0;
 					}
 				}
-			}
-		}
-	}
 
-	$columns: 100;
+				.entry-header {
+					.entry-title {
+						line-height: 2.8rem;
+						margin: 0;
+						padding: 0;
+					}
 
-	@for $column from 2 through $columns {
-		.paged-#{$column} {
-			.content-area {
-				.grid-items {
-					.grid-item {
-						&:first-child {
-							grid-column: 1;
-						}
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
 					}
 				}
 			}
