--- a/resources/scss/07.components/03.contents/02.single/_index.scss
+++ b/resources/scss/07.components/03.contents/02.single/_index.scss
@@ -1,3 +1,99 @@
+@media screen and ( max-width: 480px ) {
+	.single-post {
+		.content-area {
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				padding: 1.125rem;
+
+				.entry-header {
+					.entry-title {
+						margin: 0;
+						padding: 0;
+					}
+
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 481px ) and ( max-width: 600px ) {
+	.single-post {
+		.content-area {
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				padding: 1.125rem;
+
+				.entry-header {
+					.entry-title {
+						margin: 0;
+						padding: 0;
+					}
+
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 601px ) and ( max-width: 768px ) {
+	.single-post {
+		.content-area {
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				padding: 1.125rem;
+
+				.entry-header {
+					.entry-title {
+						margin: 0;
+						padding: 0;
+					}
+
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and ( min-width: 769px ) and ( max-width: 1024px ) {
+	.single-post {
+		.content-area {
+			.post {
+				background: color( white );
+				box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
+				padding: 1.125rem;
+
+				.entry-header {
+					.entry-title {
+						margin: 0;
+						padding: 0;
+					}
+
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.625rem;
+					}
+				}
+			}
+		}
+	}
+}
+
 @media screen and ( min-width: 1170px ) {
 	.single-post {
 		.content-area {
