--- a/resources/scss/08.utilities/_helpers.scss
+++ b/resources/scss/08.utilities/_helpers.scss
@@ -1,5 +1,8 @@
-.clear {
-	clear: both;
-	content: "";
-	display: table;
+.site-content {
+	&:before,
+	&:after {
+		clear: both;
+		content: "";
+		display: table;
+	}
 }
