--- a/resources/scss/07.components/03.contents/04.comment/_index.scss
+++ b/resources/scss/07.components/03.contents/04.comment/_index.scss
@@ -25,6 +25,7 @@
 		.bypostauthor > {
 			.comment-body {
 				background: #eeeeee;
+				border: 0.063rem solid #cccccc;
 				padding: 1.125rem;
 			}
 		}
