--- a/resources/scss/07.components/03.contents/06.archive/_index.scss
+++ b/resources/scss/07.components/03.contents/06.archive/_index.scss
@@ -1,6 +1,6 @@
 .archive {
 	.content-area {
-		.grid-col-2 {
+		.grid-col-3 {
 			margin-top: 0;
 
 			.post {
@@ -14,8 +14,19 @@
 
 				.entry-header {
 					.entry-title {
+						line-height: 2.6rem;
 						margin: 0;
 						padding: 0;
+
+						a {
+							color: color( black );
+							text-decoration: none;
+						}
+					}
+
+					.entry-metadata {
+						font-family: font-family( date );
+						font-size: 1.8rem;
 					}
 				}
 			}
