--- a/resources/scss/07.components/07.sections/blog/_index.scss
+++ b/resources/scss/07.components/07.sections/blog/_index.scss
@@ -43,6 +43,20 @@
 					background: color( white );
 					box-shadow: 0 0.375rem 0.375rem hsl( 0deg 0% 0% / 0.3 );
 					padding: 1.125rem;
+					line-height: 1.8rem;
+
+					.entry-header {
+
+						.entry-title {
+							margin: 0;
+							padding: 0;
+						}
+
+						.entry-metadata {
+							font-family: font-family( date );
+							font-size: 1.7rem;
+						}
+					}
 
 					.wp-caption {
 						text-align: center;
