--- a/resources/scss/07.components/03.contents/_index.scss
+++ b/resources/scss/07.components/03.contents/_index.scss
@@ -3,5 +3,5 @@
 @import '03.page/index';
 @import '04.comment/index';
 @import '05.404/index';
-@import '06.archive/index';
+@import '06.archive/__index';
 @import '07.portfolio/index';
