--- a/resources/scss/07.components/05.footers/_index.scss
+++ b/resources/scss/07.components/05.footers/_index.scss
@@ -2,6 +2,7 @@
 	background: color( black );
 	color: color( white );
 	padding: 1.125rem;
+	line-height: 1.5rem;
 	text-align: center;
 
 	.site-info {
