--- a/resources/scss/07.components/02.navigations/01.primary/_index.scss
+++ b/resources/scss/07.components/02.navigations/01.primary/_index.scss
@@ -113,7 +113,7 @@
 			margin: 0;
 			padding: 0;
 			position: static;
-			justify-content: center;
+			justify-content: right;
 
 			.menu-item {
 				left: unset;
