add tags to the style.css

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
  * Description:  Creativity is a next-generation theme designed to work with ClassicPress, offering an ideal experience for showcasing your site's content.
  * License:      GNU General Public License v2.0 or later
  * License URI:  https://www.gnu.org/licenses/gpl-2.0.html
- * Tags:
+ * Tags:         left-sidebar, one-column, right-sidebar, accessibility-ready, custom-header, custom-menu, featured-images, theme-options, threaded-comments, translation-ready, two-columns, blog, entertainment, portfolio
  * Text Domain: creativity
  * Requires CP:  1.5
  * Requires PHP: 7.1
