--- a/resources/scss/07.components/02.navigations/01.primary/_index.scss
+++ b/resources/scss/07.components/02.navigations/01.primary/_index.scss
@@ -57,18 +57,11 @@
 							content: '';
 							display: inline-block;
 							border: solid white;
-							border-width: 0 4px 4px 0;
+							border-width: 0 0.25rem 0.25rem 0;
 							transform: rotate( -135deg );
-							padding: 4px;
+							padding: 0.25rem;
 							margin-right: 0.6rem;
 						}
-					}
-
-					.arrow {
-						border: solid black;
-						border-width: 0 3px 3px 0;
-						display: inline-block;
-						padding: 3px;
 					}
 				}
 
@@ -98,9 +91,9 @@
 								content: '';
 								display: inline-block;
 								border: solid white;
-								border-width: 0 4px 4px 0;
+								border-width: 0 0.25rem 0.25rem 0;
 								transform: rotate(45deg);
-								padding: 4px;
+								padding: 0.25rem;
 								margin-right: 0.6rem;
 							}
 						}
@@ -154,9 +147,9 @@
 								content: '';
 								display: inline-block;
 								border: solid white;
-								border-width: 0 4px 4px 0;
-								transform: rotate(45deg);
-								padding: 4px;
+								border-width: 0 0.25rem 0.25rem 0;
+								transform: rotate( 45deg );
+								padding: 0.25rem;
 								margin-left: 0.6rem;
 							}
 						}
