--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
  * Text Domain: creativity
  * Requires CP:  1.5
  * Requires PHP: 7.1
- * Tested up to: 6.0
- * Version:      0.1.7
+ * Requires at least: 4.9
+ * Tested up to: 6.2
+ * Version:      0.1.8
  */
 
 /* -------------------------------------------------------------------------------------------
